half-done retro

--- a/_posts/2017-12-20-2017YearInReview.markdown
+++ b/_posts/2017-12-20-2017YearInReview.markdown
@@ -19,7 +19,7 @@ She's 7 months old now and wonderful. There's a special kind of bliss seeing she
 
 With the second baby, our needs turned a little more practical, and our futures towards school districts and play dates. We toured about a dozen houses on the west side of Colorado Springs over the course of four months or so and worked Zillow like a job. Then one day we found the one, it was listed and we had an offer written on in within about eight hours. We really love it: cars in the garage, awesome great-room on the kitchen, 3/2 upstairs and another 1/1 down. Across the street from one of the biggest parks in town.
 
-It all happened a little fast, and we haven't officially sold our old place just yet, but it's getting close now.
+It all happened a little fast, and we haven't officially sold our old place just yet, but it's getting close now. I'd like to think the personal upheaval might abate through 2018, but I guess we'll have to wait and see.
 
 ## At BombBomb
 BombBomb had a phenomenal year: revenue and staff headcount both grew in the ballpark of 60% over 2016. Our new [prompt tools](https://bombbomb.com/prompt/) were a breakout success and promise to be a foundational element of how we build software at BombBomb for the next few years.
