--- a/_posts/2018-10-18-Bombcast.markdown
+++ b/_posts/2018-10-18-Bombcast.markdown
@@ -2,10 +2,10 @@
 layout: post
 title: "Podcast: Video Sales Strategies - The Bombcast!"
 author: Patrick McDavid
-img: louvre-battle.jpg
+img: product-cast.jpg
 tags: [iOS, Android, ]
 ---
 
 BombBomb's Bombcast invited myself and their VP of Product to talk about our Fall 2018 releases and some of the story behind them!
 
-<iframe style="border: solid 1px #dedede;"  src="https://app.stitcher.com/splayer/f/179561/56837086" width="100%" height="150" frameborder="0" scrolling="no"></iframe>
+<div align="center"><iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FBombBomb%2Fvideos%2F485818128585532%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe></div>
